--- a/mystyle.css
+++ b/mystyle.css
@@ -1,9 +1,11 @@
  <head>
  <style>
  body{
- 	background-image: url(background.jpg) purple;
+ 	background-image: url(background.jpg) blue;
  	background-position: top center
  	no-repeat
  	fixed
 	background-color:black; 
  }
+ p{color:blue;}
+h1{color:purple;}
