--- a/mystyle.css
+++ b/mystyle.css
@@ -1,15 +1,20 @@
  <head>
  <style>
- body{
-
- background-image: url(background.jpg) blue;
- 	background-position: top center;
-	background-repeat: no-repeat;
- 	background-attachment: fixed;
-	background-color:black; }
- 	
+ .container{
+ 	text-align: center;
  }
-p{font-color:blue;} 
-h1{font-color:purple;}
+ .center_div{
+ 	border: 2px solid gray;
+ 	margin-left: auto;
+ 	margin-right: auto;
+ 	width: 90%;
+ 	background-color: #d0f0f6;
+ 	text-align: center;
+ 	padding: 8px
+ 	 }
+ body{
+ 	background: #5d9ab2 url("background.jpg) no-repeat center;
+ 
+
 </style>
 </head>
