--- a/mystyle.css
+++ b/mystyle.css
@@ -16,8 +16,15 @@
  	 	border: 2px solid gray;
  	 	background-color: #d0f0f6
  	 }
+ 	 .bio{
+ 	  	background-image:url(me.jpg);
+ 	  	background-position: left;
+ 	  	backgruound-norepeat: no-repeat;
+
+ 	 }
  body{
  	 	background-image: url(background.JPG);
+
 
  }
  
