--- a/mystyle.css
+++ b/mystyle.css
@@ -8,8 +8,8 @@
  	margin-left: auto;
  	margin-right: auto;
  	width: 90%;
- 	background-color: #d0f0f6;
- 	text-align: center;
+ 	background-color: gray;
+ 	text-align: left;
  	padding: 8px;
  	 }
  	 .resume_div{
