--- a/mystyle.css
+++ b/mystyle.css
@@ -21,8 +21,8 @@
  	margin-left: auto;
  	margin-right: auto;
  	width: 90%;
- 	background-color: #d3d3d3;
- 	text-align: left;
+ 	background-color: #F0F8FF;
+ 	text-align: center;
  	padding: 8px;
  	  
 
