--- a/mystyle.css
+++ b/mystyle.css
@@ -1,43 +1,140 @@
- <head>
- <style>
- .container{
- 	text-align: center;
- }
- .center_div{
- 	border: 2px solid gray;
- 	margin-left: auto;
- 	margin-right: auto;
- 	width: 90%;
- 	background-color: #d0f0f6;
- 	text-align: center;
- 	padding: 8px;
- 	 }
-  .aboutme > *{
-    float:left;
-    margin-right:5px;
+
+body {
+  font-size: 12pt; 
+  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
+   font-weight: 300;
+  line-height: 15pt;
+  background-color: #FFFFFF;
 }
- 	 .resume_div{
- 	 	border: 2px solid gray;
- 	 	background-color: #d0f0f6
- 	 }
- 	 .bio_div{
- 	border: 2px solid gray;
- 	margin-left: auto;
- 	margin-right: auto;
- 	width: 90%;
- 	background-color: #F0F8FF;
- 	text-align: center;
- 	padding: 8px;
- 	  
 
- 	 }
- html,body{
- 	 	background-image: url(background.JPG);
+b { 
+  font-weight: 500; 
+}
+
+h1 {
+  color: #008080;
+  padding-top: 10px;
+  padding-right: 30px;
+  font-weight: 500;
+}
+
+h2 {
+  color: #008080;
+  font-weight: 500;
+}
+
+h3 {
+  color: #008080;
+  font-weight: 500;
+}
+
+a:link {
+  color: #00a5a5;
+}
+a:visited {
+  color: #00a5a5;
+}
+
+.box {
+  width: 850px;
+  margin: 20px auto 20px auto;
+  border: 2px solid #000000;
+  text-align: left;
+  background-color: #ffffff;
+}
+
+.innerbox {
+  padding: 10px 10px 10px 10px;
+}
+
+.disclaimer {
+  padding: 10px 20px 10px 20px;
+  font-size:10pt;
+  text-align: center;
+}
+
+.footer {
+  padding: 10px 40px 10px 40px;
+  border-top: 1px solid gray;
+  font-size:10pt;
+  background-color: #f0f0f0;
+}
+
+pre {
+  padding: 1em;
+  border: 1px dashed gray;
+  color: black;
+  background-color: #f9f9f9;
+  line-height: 1.1em;
+}
+
+#navigation {
+  text-align: center;
+  font-weight: 500;
+  background-color: #008080;
+  padding: 8px 31px 7px 31px;
+  font-size: 14pt;
+  color: #ffffff;
+}
+
+#navigation a {
+  text-decoration: none;
+  padding: 8px 31px 7px 31px;
+  font-size: 14pt;
+  color: #ffffff;
+}
+
+#navigation b {
+  text-decoration: none;
+  padding: 8px 31px 7px 31px;
+  font-size: 14pt;
+  color: #000000;
+  background-color: #d7e2e2;
+}
+
+#navigation a:visited, a:active {
+  text-decoration: none;
+}
+
+#navigation a:hover {
+  color: #000000;
+  background-color: #d7e2e2;
+  padding-bottom: 8px;
+}
 
 
- }
- 
- 
+#align_top {
+	vertical-align: top;
+	padding:10;
+}
 
-</style>
-</head>
+#align_top_no_padding {
+	vertical-align: top;
+	padding:0;
+}
+
+#align_top_text {
+	vertical-align: top;
+	padding-top: 10;
+	padding-left: 20;
+	padding-bottom: 30;
+}
+
+#align_top_project_img {
+	vertical-align: top;
+	padding:10;
+	padding-bottom:10;
+}
+
+#no_padding {
+	padding: 0;
+	padding-right: 10px;
+}
+
+#project_img {
+	width: 200px;
+	vertical-align: top;
+	border-width: 1px;
+	border-style: solid;
+	border-color: #000000;
+}
