--- a/mystyle.css
+++ b/mystyle.css
@@ -12,14 +12,14 @@ b {
 }
 
 h1 {
-  color: #008080;
+  color: #eeccff;
   padding-top: 10px;
   padding-right: 30px;
   font-weight: 500;
 }
 
 h2 {
-  color: #008080;
+  color: #eeccff;
   font-weight: 500;
 }
 
@@ -71,7 +71,7 @@ pre {
 #navigation {
   text-align: center;
   font-weight: 500;
-  background-color: #008080;
+  background-color: #eeccff;
   padding: 8px 31px 7px 31px;
   font-size: 14pt;
   color: #ffffff;
