--- a/mystyle.css
+++ b/mystyle.css
@@ -1,8 +1,8 @@
 
 body {
   font-size: 12pt; 
-  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
-   font-weight: 300;
+  font-family: "Courier New", Courier, "Lucida Sans Typewriter", "Lucida Typewriter", serif;
+  font-weight: 300;
   line-height: 15pt;
   background-color: #FFFFFF;
 }
